--- a/backend/authentication/src/main/resources/application.yml
+++ b/backend/authentication/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   # JPA & Hibernate
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
