--- a/backend/authentication/src/main/resources/application.yml
+++ b/backend/authentication/src/main/resources/application.yml
@@ -33,6 +33,6 @@ security:
 UserController:
   signin: Authenticates user and returns its JWT token.
   signup: Creates user and returns its JWT token
-  delete: Deletes specific user by username
-  search: Returns specific user by username
-  me: Returns current user's data
+#  delete: Deletes specific user by username
+#  search: Returns specific user by username
+#  me: Returns current user's data
