--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,12 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@fullcalendar/angular": "^6.1.9",
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/interaction": "^6.1.9",
+    "@fullcalendar/list": "^6.1.9",
+    "@fullcalendar/timegrid": "^6.1.9",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "rxjs": "~7.8.0",
