--- a/backend/authentication/pom.xml
+++ b/backend/authentication/pom.xml
@@ -73,6 +73,12 @@
 			<version>2.4.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
