--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -84,6 +84,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!--PDF-->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itext7-core</artifactId>
+			<version>7.2.3</version>
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
