--- a/backend/src/main/resources/taxes.properties
+++ b/backend/src/main/resources/taxes.properties
@@ -1,22 +1,22 @@
 # UMOWA O DZIELO
-taxes.dzielo.proc-kosztu-uzyskania= 0.2
-taxes.dzielo.podatek= 0.17
+tax.dzielo.proc-kosztu-uzyskania= 0.2
+tax.dzielo.podatek= 0.17
 
 # UMOWA ZLECENIE
-taxes.zlecenie.proc-kosztu-uzyskania= 0.20
-taxes.zlecenie.student.proc-kosztu-uzyskania= 0.2
-taxes.zlecenie.student.podstawa-opodatkowania= 0
-taxes.zlecenie.skladka-rentowa=  0.015
-taxes.zlecenie.skladka-emerytalna=  0.0976
-taxes.zlecenie.skladka-ubez-chorobowego= 0
-taxes.zlecenie.skladka-ubez-zdrowotne=  0.09
-taxes.zlecenie.skladka-ubez-zdrowotne-odliczenie=  0.09
-taxes.zlecenie.wiek-dla-ulgi-studenta=  26
-taxes.zlecenie.ryczalt.proc= 0.17
+tax.zlecenie.proc-kosztu-uzyskania= 0.20
+tax.zlecenie.student.proc-kosztu-uzyskania= 0.2
+tax.zlecenie.student.podstawa-opodatkowania= 0
+tax.zlecenie.skladka-rentowa=  0.015
+tax.zlecenie.skladka-emerytalna=  0.0976
+tax.zlecenie.skladka-ubez-chorobowego= 0
+tax.zlecenie.skladka-ubez-zdrowotne=  0.09
+tax.zlecenie.skladka-ubez-zdrowotne-odliczenie=  0.09
+tax.zlecenie.wiek-dla-ulgi-studenta=  26
+tax.zlecenie.ryczalt.proc= 0.17
 
 # PODATEK VAT: DZIALALNOSC GOSPODARCZA, FIRMA
-taxes.vat= 0.23
-taxes.zero-vat= 0
+tax.vat= 0.23
+tax.zero-vat= 0
 
 #OGOLNE
-taxes.kwota-ryczalt= 200
+tax.kwota-ryczalt= 200
